--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -39,12 +29,19 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --color-1: 0 100% 63%;
-    --color-2: 270 100% 63%;
-    --color-3: 210 100% 63%;
-    --color-4: 195 100% 63%;
-    --color-5: 90 100% 63%;
+
+    --brand: 173 93% 30%; /* #049688 approx */
+    --muted-light: 0 0% 45%;
+    --card-color: 0 0% 5%;
+    --card-color-foreground: 0 0% 10%;
+    
+    --color-1: 200 64% 6.5%;
+    --color-2: 206 45% 12%;
+    --color-3: 206 30% 21%;
+    --color-4: 206 18% 35%;
+    --color-5: 191 9% 64%; 
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -76,13 +73,68 @@ body {
     --color-4: 195 100% 63%;
     --color-5: 90 100% 63%;
   }
-}
 
-@layer base {
+  .maplibregl-popup-content {
+    @apply bg-transparent! shadow-none! p-0! rounded-none!;
+  }
+  .maplibregl-popup-tip {
+    @apply hidden!;
+  }
+
   * {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground antialiased;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+  .text-xxs {
+    font-size: 0.625rem;
+  }
+  
+
+
+  .premium-card-shadow {
+    box-shadow: 
+      0px 32px 64px -16px rgba(0, 0, 0, 0.3),
+      0px 16px 32px -8px rgba(0, 0, 0, 0.3),
+      0px 8px 16px -4px rgba(0, 0, 0, 0.24),
+      0px 4px 8px -2px rgba(0, 0, 0, 0.24),
+      0px -8px 16px -1px rgba(0, 0, 0, 0.16),
+      0px 2px 4px -1px rgba(0, 0, 0, 0.24),
+      0px 0px 0px 1px rgba(0, 0, 0, 1),
+      inset 0px 0px 0px 1px rgba(255, 255, 255, 0.08),
+      inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+  }
+
+  .figtree-font {
+    font-family: var(--font-figtree);
+  }
+
+  .doto-font {
+    font-family: var(--font-doto);
+  }
+
+  .jetbrains-mono {
+    font-family: var(--font-jetbrains-mono);
+  }
+
+  .mask-fade {
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0)
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0)
+    );
   }
 }
